tests/ui/error-codes/E0425.stderr
error[E0425]: cannot find value `elf` in this scope
  --> $DIR/E0425.rs:3:9
   |
LL |         elf;
   |         ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
