tests/ui/error-codes/E0425.rs
trait Foo {
    fn bar() {
        elf; //~ ERROR E0425
    }
}

fn main () {
}
